--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 		</div>
 		<div class="footer">
 			<div style="float: left;">Copyright &copy; 2009 Website Name All Rights Reserved.</div>
-			<div style="float: right;">Template  developed by Preetam Patil.</div>
+			<div style="float: right;color: red;">Template  developed by Preetam Patil.</div>
 		</div>
 	</body>
 	</html>
